# Habbit-Tracker

.kiro/steering/: product.md  structure.md  tech.md
backend/: .gitignore  pyproject.toml  requirements.txt  server.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  habits.py  status.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  security.py
backend/app/models/: analytics.py  habit.py  status.py  user.py
backend/tests/: __init__.py  conftest.py  test_api.py
frontend/: .env
frontend/src/: App.js  index.css
frontend/src/components/: AddHabitDialog.js  AuthDialog.js  CalendarView.js  ConnectionStatus.js  DataExport.js  EmptyState.js  HabitCard.js  HabitCardSkeleton.js  HabitList.js  Header.js  StatsCard.js  StatsCardSkeleton.js
frontend/src/contexts/: AuthContext.js  HabitsContext.js  ThemeContext.js
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.js
